# robot_qt_ui

./: .gitignore  .qmake.stash  192.168.4.12  192.168.4.176  AndroidManifest.xml  Gobot  Gobot.pro  GobotSoftware.pro  GobotSoftware.pro.user.77368f4  Makefile  README.md  auth.qml  currentMap.txt  currentMap.txt~  currentPaths.xml  currentPoints.xml  drawobstaclestask.cpp  drawobstaclestask.h  filename.txt  frames.gv  git exit  gobot-software.pro  gobot-software.pro.user.2adf301  gobot-software.pro.user~  gobot-software.pro~  gobotsoftware_plugin_import.cpp  localhost  main.cpp  main.qml  mobot_studio.pro  moc_cmdrobotthread.cpp  moc_createpointwidget.cpp  moc_customlineedit.cpp  moc_custompushbutton.cpp  moc_customqgraphicsview.cpp  moc_customscrollarea.cpp  moc_displaypathgroup.cpp  moc_displayselectedgroup.cpp  moc_displayselectedpath.cpp  moc_displayselectedpoint.cpp  (+36 more)
.qtquickcompiler/: Customs_MenuButton_qml.cpp  View_MainMenu_qml.cpp  main_qml.cpp  qtquickcompiler_loader.cpp
Controller/: authentification.cpp  authentification.h  cmdrobotthread.cpp  cmdrobotthread.h  cmdrobotworker.cpp  cmdrobotworker.cpp.autosave  cmdrobotworker.h  cmdrobotworker.h.autosave  commandcontroller.cpp  commandcontroller.h  lasercontroller.cpp  lasercontroller.h  localmapworker.cpp  localmapworker.h  maincontroller.cpp  maincontroller.h  mainmenucontroller.cpp  mainmenucontroller.h  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  mapcontroller.cpp  mapcontroller.h  metadataworker.cpp  metadataworker.h  pathscontroller.cpp  pathscontroller.cpp.autosave  pathscontroller.h  pointscontroller.cpp  pointscontroller.h  robotpositionworker.cpp  robotpositionworker.h  robotscontroller.cpp  robotscontroller.h  robotserverworker.cpp  robotserverworker.h  scanmapthread.cpp  scanmapthread.h  scanmapworker.cpp  (+19 more)
Customs/: MenuButton.qml
Helper/: helper.cpp  helper.h  helper.js  style.js
Model/: Tutorial.qml  comparerobotsxml.cpp  comparerobotsxml.h  currentpath.cpp  currentpath.h  enumgraphicstate.h  graphicitemstate.h  group.cpp  group.h  map.cpp  map.h  opencvqttransform.h  origin.h  pathpoint.cpp  pathpoint.h  paths.cpp  paths.cpp.autosave  paths.h  point.cpp  point.h  points.cpp  points.h  points.h~  position.cpp  position.h  robot.cpp  robot.cpp.autosave  robot.h  robots.cpp  robots.h  settings.cpp  settings.h  toplayout.cpp  toplayout.h  xmlparser.cpp  xmlparser.h
Resources/: gtrobot-1.pgm.pgm  map.pgm  map_points.xml  oldRobots.xml  points.xml  points.xml~  pointsBis.xml  resources.qrc  resources.qrc~  resources2.qrc  robots.xml
RobotFiles/: restart_packages.sh  roslaunch.sh  sonar_bumper.py  used_map.pgm
RobotFiles/gobot_software/: CMakeLists.txt  CMakeLists.txt~  package.xml
RobotFiles/gobot_software/Robot_Infos/: change_wifi.sh  home.txt  mapId.txt  name.txt  path.txt
RobotFiles/gobot_software/Robot_Infos/IP/: isAlive.txt  ping.sh  run.py  server.txt
RobotFiles/gobot_software/launch/: battery.launch  battery.launch~  command_sys.launch  command_sys.launch~  dock.launch  dock2.launch  map.launch  merge_map_launch.7z  robot_infos_params.launch  slam.launch  slam.launch~  test.launch  test.launch~
RobotFiles/gobot_software/launch/merge_map_launch/: slam.launch
RobotFiles/gobot_software/scripts/: auto_charging.py  battery.py  battery.py~  ping_server.py  ping_server.py~
RobotFiles/gobot_software/src/: auto_docking.cpp  auto_docking.hpp  auto_docking_old.cpp  auto_docking_old.hpp  backup_playPath.cpp  backup_server.cpp  backup_server.hpp  cluster_optimized.cpp  cluster_optimized.h  command_system.cpp  command_system.hpp  isLocalised_optimized.cpp  isLocalized_optimized.cpp  laser.cpp  laser.hpp  map_metadata_transfer.cpp  map_metadata_transfer.hpp  map_transfer.cpp  map_transfer.hpp  particle_cloud.cpp  particle_cloud.hpp  ping_server.cpp  ping_server.hpp  playPath.cpp  playPath.hpp  play_path_new.cpp  read_new_map.cpp  read_new_map.hpp  recover_position.cpp  recover_position.hpp  robot_pos_transfer.cpp  robot_pos_transfer.hpp  start_gobot_move.sh  start_gobot_software.sh  teleop.cpp  teleop.hpp
RobotFiles/gobot_software/src/backup/: README.txt  map_metadata_transfer.cpp
RobotFiles/gobot_software/srv/: SendMessageToPc.srv~  SetDockStatus.srv  gomap.srv~
View/: MainMenu.qml  ObstaclesItems.qml  TutorialDialog.qml  bottomlayout.cpp  bottomlayout.h  buttonmenu.cpp  buttonmenu.h  colors.h  commandmessagebox.cpp  customlabel.h  (+143 more)
(+674 files in other folders)
